--- a/Impressum.html
+++ b/Impressum.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;"><head>
+<html style="font-size: 16px;" lang="de"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="IT - Nordlicht Bosse Klein">
     <meta name="description" content="Impressum von it.essbo.eu
 ">
-    <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Impressum</title>
     <link rel="stylesheet" href="stylesheet.css" media="screen">
 <link rel="stylesheet" href="Impressum.css" media="screen">
@@ -13,7 +12,7 @@
     <script class="u-script" type="text/javascript" src="javascript.js" defer=""></script>
     <meta property="og:title" content="IT - Nordlicht Bosse Klein">
     <meta property="og:description" content="Glänzt durch Expertise | Erfahrung und Ehrgeiz">
-    <meta property="og:image" content="images/bosse.jpg">
+    <meta property="og:image" content="../images/bossebild.jpg">
     <meta property="og:url" content="it.essbo.eu">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700|Alata:400">
@@ -93,24 +92,175 @@ box-shadow: 2px 2px 8px 0 rgba(128,128,128,1) !important
           <a class="u-social-url" title="facebook" target="_blank" href="facebook.com/essboi"><span class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-4231"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-4231"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
             c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg></span>
           </a>
-          <a class="u-social-url" title="twitter" target="_blank" href="https://www.linkedin.com/in/bosse-klein-b35550207/"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-icon-2"><img src="images/linkedin.png" alt=""></span>
+          <a class="u-social-url" title="twitter" target="_blank" href="https://www.linkedin.com/in/bosse-klein-b35550207/"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-icon-2"><img src="../images/179330.png" alt=""></span>
           </a>
           <a class="u-social-url" title="instagram" target="_blank" href="https://www.instagram.com/bossklei/"><span class="u-icon u-social-icon u-social-instagram u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-1d9f"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-1d9f"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
             z M55.9,66.4c-5.7,0-10.3-4.6-10.3-10.3c-0.1-5.7,4.6-10.3,10.3-10.3c5.7,0,10.3,4.6,10.3,10.3C66.2,61.8,61.6,66.4,55.9,66.4z"></path><path fill="#FFFFFF" d="M74.3,33.5c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2S76.6,33.5,74.3,33.5z"></path><path fill="#FFFFFF" d="M73.1,21.3H38.6c-9.7,0-17.5,7.9-17.5,17.5v34.5c0,9.7,7.9,17.6,17.5,17.6h34.5c9.7,0,17.5-7.9,17.5-17.5V38.8
             C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4.5-9.9-9.9V38.8c0-5.5,4.5-9.9,9.9-9.9h34.5
             c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
           </a>
-          <a class="u-social-url" title="Github" target="_blank" href="https://github.com/essbo"><span class="u-file-icon u-icon u-social-icon u-social-linkedin u-icon-4"><img src="images/github.png" alt=""></span>
+          <a class="u-social-url" title="Github" target="_blank" href="https://github.com/essbo"><span class="u-file-icon u-icon u-social-icon u-social-linkedin u-icon-4"><img src="../images/1051326.png" alt=""></span>
           </a>
           <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/channel/UCrZ6y4dF8pK7NGiJ-Ju-tFw"><span class="u-icon u-social-icon u-social-youtube u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-6092"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-6092"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M74.9,33.3H37.3c-7.4,0-13.4,6-13.4,13.4v18.8c0,7.4,6,13.4,13.4,13.4h37.6c7.4,0,13.4-6,13.4-13.4V46.7 C88.3,39.3,82.3,33.3,74.9,33.3L74.9,33.3z M65.9,57l-17.6,8.4c-0.5,0.2-1-0.1-1-0.6V47.5c0-0.5,0.6-0.9,1-0.6l17.6,8.9 C66.4,56,66.4,56.8,65.9,57L65.9,57z"></path></svg></span>
           </a>
-          <a class="u-social-url" target="_blank" data-type="Custom" title="Steam" href="https://steamcommunity.com/id/Essbo/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-6"><img src="images/steam.png" alt=""></span>
+          <a class="u-social-url" target="_blank" data-type="Custom" title="Steam" href="https://steamcommunity.com/id/Essbo/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-6"><img src="../images/220223.png" alt=""></span>
           </a>
-          <a class="u-social-url" target="_blank" data-type="Custom" title="Twitch" href="https://www.twitch.tv/essbo"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-7"><img src="images/twitch.png" alt=""></span>
+          <a class="u-social-url" target="_blank" data-type="Custom" title="Twitch" href="https://www.twitch.tv/essbo"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-7"><img src="../images/356001.png" alt=""></span>
           </a>
         </div>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1">IT - Nordlicht - Bosse Klein<br>
         </p>
-      </div></footer>
+      </div></footer><section class="u-align-center u-clearfix u-cookies-consent u-palette-2-base u-cookies-consent" id="sec-8fbf">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+          <div class="u-gutter-0 u-layout">
+            <div class="u-layout-row">
+              <div class="u-container-style u-layout-cell u-left-cell u-size-43-md u-size-43-sm u-size-43-xs u-size-46-lg u-size-46-xl u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
+                  <h3 class="u-text u-text-1">Cookies &amp; Privatsphäre</h3>
+                  <p class="u-text u-text-2">Diese Webseite benutzt Cookies, ebenfalls werden Zugriffe auf diese Website gespeichert. (Zugriffszeitpunkt / IP - Adresse)</p>
+                </div>
+              </div>
+              <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-14-lg u-size-14-xl u-size-17-md u-size-17-sm u-size-17-xs u-layout-cell-2">
+                <div class="u-container-layout u-container-layout-2">
+                  <a href="###" class="u-black u-border-none u-btn u-button-confirm u-button-style u-btn-1">Verstanden!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <style> .u-cookies-consent {
+  background-image: none;
+}
+
+.u-cookies-consent .u-sheet-1 {
+  min-height: 101px;
+}
+
+.u-cookies-consent .u-layout-wrap-1 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-cookies-consent .u-layout-cell-1 {
+  min-height: 101px;
+}
+
+.u-cookies-consent .u-container-layout-1 {
+  padding: 0 60px 5px;
+}
+
+.u-cookies-consent .u-text-1 {
+  margin: 0 446px 0 0;
+}
+
+.u-cookies-consent .u-text-2 {
+  margin: 8px 158px 0 0;
+}
+
+.u-cookies-consent .u-layout-cell-2 {
+  min-height: 101px;
+}
+
+.u-cookies-consent .u-container-layout-2 {
+  padding: 8px 30px 20px;
+}
+
+.u-cookies-consent .u-btn-1 {
+  background-image: none;
+  margin: 20px auto 0;
+}
+
+@media (max-width: 1199px) {
+  .u-cookies-consent .u-sheet-1 {
+    min-height: 131px;
+  }
+
+  .u-cookies-consent .u-layout-cell-1 {
+    min-height: 83px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 293px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 5px;
+  }
+
+  .u-cookies-consent .u-layout-cell-2 {
+    min-height: 83px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-cookies-consent .u-sheet-1 {
+    min-height: 106px;
+  }
+
+  .u-cookies-consent .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 148px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-cookies-consent .u-layout-cell-2 {
+    min-height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-cookies-consent .u-sheet-1 {
+    min-height: 225px;
+  }
+
+  .u-cookies-consent .u-layout-cell-1 {
+    min-height: 154px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+  }
+
+  .u-cookies-consent .u-layout-cell-2 {
+    min-height: 65px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-cookies-consent .u-sheet-1 {
+    min-height: 121px;
+  }
+
+  .u-cookies-consent .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-cookies-consent .u-layout-cell-2 {
+    min-height: 15px;
+  }
+}</style></section>
   
 </body></html>
