--- a/Startseite.html
+++ b/Startseite.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Fachinfrormatiker für Systemintegration">
     <meta property="og:image" content="../images/bossebild.jpg">
     <meta property="og:url" content="it.essbo.eu">
-    <link rel="icon" href="images/favicon.jpeg">
+    <link rel="icon" href="images/favicon.ico">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700|Alata:400">
     
